# logseq-plugin-vocabulary-card

./: .gitignore  AGENTS.md  MIGRATION_PLAN.md  README.md  RELEASING.md  TODO.md  index.html  justfile  package.json  tsconfig.json
.github/workflows/: auto-tag.yml  ci.yml  publish.yml
.opencode/skills/logseq-plugin-dev/: SKILL.md
.opencode/skills/logseq-plugin-dev/assets/template/: index.html
.opencode/skills/logseq-plugin-dev/assets/template-react/: index.html  vite.config.ts
.opencode/skills/logseq-plugin-dev/assets/template-react/src/: main.tsx
.opencode/skills/logseq-plugin-dev/assets/template/src/: main.ts
.opencode/skills/logseq-plugin-dev/references/: api.md  examples.md
lib/: Cargo.toml  README.md
lib/src/: gemini_dictionary.rs  http_request.rs  lib.rs
plugin/: README.md  index.html  index.js  package.json  pnpm-lock.yaml
src/: index.ts
src/logseq/: blocks.test.ts  blocks.ts  settings.ts
src/vocabulary/: generator.test.ts  generator.ts  providers.test.ts  providers.ts  schema.ts
