[package]
name = "logseq-plugin-vocabulary-card"
version = "0.1.0"
authors = ["Richard Hao <richard@0xdev.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
serde-wasm-bindgen = "0.6.3"
serde = { version = "1.0.194", features = ["derive"] }
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde_json = "1.0.110"
wasm-bindgen-futures = "0.4.39"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
