[package]
name = "logseq-plugin-vocabulary-card"
version = "0.1.0"
authors = ["Richard Hao <richard@0xdev.dev>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.89"
wasm-bindgen-futures = "0.4.39"
serde-wasm-bindgen = "0.6.3"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.110"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
