[package]
name = "logseq-plugin-vocabulary-card"
version = "0.1.1"
authors = ["Richard Hao <richard@0xdev.dev>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
async-trait = "0.1.81"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
